aks-workshop/kyverno/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno
  namespace: kyverno
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyverno
  template:
    metadata:
      labels:
        app: kyverno
    spec:
      serviceAccountName: kyverno
      containers:
        - name: kyverno
          image: ghcr.io/kyverno/kyverno:latest
          imagePullPolicy: IfNotPresent
          args:
            - --webhooktimeout=10
            - --gen-workers=10
          ports:
            - containerPort: 9443
              name: webhook
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 9443
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 9443
              scheme: HTTPS

---
apiVersion: v1
kind: Service
metadata:
  name: kyverno-svc
  namespace: kyverno
spec:
  selector:
    app: kyverno
  ports:
    - name: webhook
      port: 443
      targetPort: 9443
