aks-workshop/kyverno/admin-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: >-
      Privileged containers can access host resources. This policy 
      prevents privileged containers from being created.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: privileged-containers
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - policy-test
    validate:
      message: >-
        Privileged containers are not allowed. 
        Set securityContext.privileged to false.
      pattern:
        spec:
          containers:
          - =(securityContext):
              =(privileged): "false"
